tests/NormalTests/paczka1/fuzzy1/18497733.err
Error in line 2: 7iDeRWs S0 31,8
Error in line 5: evDr4Zb7c S0 27,5
Error in line 6: evDr4Zb7c S0 9,3
Error in line 8: 7iDeRWs S0 40,1
Error in line 9: FCL6JgRhj S0 10,4
Error in line 10: 7iDeRWs S0 81,2
Error in line 11: wwAmQtY S0 26,5
Error in line 19: wwAmQtY S0 16,4
Error in line 20: wwAmQtY S781 33,1
Error in line 24: FCL6JgRhj S0 20,2
Error in line 27: 7iDeRWs S781 14,57
Error in line 31: siTXq S0 13,2
Error in line 32: evDr4Zb7c S0 84,5
Error in line 33: siTXq S0 55,4
Error in line 30: siTXq A731 43,3
Error in line 35: A731 S0 43,9
Error in line 36: FCL6JgRhj S0 82,5
Error in line 37: A731 S0 144,4
Error in line 39: evDr4Zb7c S0 323,6
Error in line 40: ?S0
